Adding changes, converting to cpp, currently working on pair.

--- a/WarmUp/searchclient/Makefile
+++ b/WarmUp/searchclient/Makefile
@@ -3,10 +3,34 @@
 #prober etc., as well as make clean for all of them, tidying up things
 #
 #
-all: prober makeTable searchclient
+all: prober maketable searchclient
+testCompile: searchclient
 
 default: all
 
-prober:
+prober: prober.cpp
+	$(CPP) $(CPP_FLAGS) $< -o prober
 
-makeTable:
+maketable: maketable.cpp
+	$(CPP) $(CPP_FLAGS) $< -o maketable
+
+CPP = g++
+CPP_FLAGS = -std=c++14 -O3#Using -O3 to aggressively optimize
+
+Root_Directory =  ${strip $(CURDIR)}
+searchClientDirectory = Root_Directory/searchClientcpp
+
+INCLUDE_TEMP =
+#Takes all of include_temp, and puts on -I flag.
+INCLUDE_DIRS = $(foreach dir, $(basename $(INCLUDE_TEMP)), -I$(dir))
+
+EXECUTABLES += $(Root_Directory)/prober $(Root_Directory)/maketable
+OBJECTS = #We can add stuff here to delete on a clean later
+
+clean:
+	rm -rf $(EXECUTABLES)
+
+
+-include $(searchClientDirectory)/Makefile.mk
+
+export INCLUDE_DIRS
